--- a/index.html
+++ b/index.html
@@ -42,12 +42,8 @@
             <ul class="task-list" id="tasks-in-progress"></ul>
         </section>
         <!--Tasks Completed-->
-        <section class="task-list-wrapper">
-            <h2 class="list-title"> Tasks To Do</h2>
-            <ul class="task-list" id="tasks-to-do">
-        </section>
         <h2 class="list-title"> Tasks Completed</h2>
-        <ul class="task-list" id="tasks-to-do"> </ul>
+        <ul class="task-list" id="tasks-completed"> </ul>
         </section>
     </main>
 
